--- a/example/config.yaml
+++ b/example/config.yaml
@@ -28,3 +28,6 @@ TRACE_BOND_MAKING: false
 USER_SPECIFIED_NODE_ASSIGNMENT: false
 WRITE_CHECK_FILES: false
 WRITE_CIF: true
+SHIFT: true
+MIN_DISTANCE: 0.5
+MAX_NATOM: 600
